[package]
name = "rinha"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
r2d2 = "0.8.10"
postgres = "0.19.7"
r2d2_postgres = "0.18.1"
lazy_static = "1.4.0"
serde = { version = "1.0.196" , features = ["derive"] }
serde_json = "1.0.113"
chrono = "0.4.34"